# djing

./: .env.example  .gitignore  MANIFEST.in  README.md  SUMMARY.md  cythonize.py  manage_stubs.py  package.py  publish.sh  pyproject.toml
addresses/: models.py
addresses/migrations/: 0001_initial.py  0002_alter_address_user.py
djing/core/: Resource.py  Util.py
djing/core/Fields/: BelongsTo.py  HasMany.py  HasOne.py  ResourceRelationshipGuesser.py
djing/core/Foundation/: Djing.cpp  Djing.pyi
djing_admin/app/Djing/: Product.py  Sku.py  User.py
djing_admin/app/Providers/: DjingServiceProvider.py
djing_ui/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
djing_ui/src/: components.ts  djing.ts  index.css  index.ts
djing_ui/src/components/: ActionSelector.vue  Badge.vue  Breadcrumb.vue  Breadcrumbs.vue  Button.vue  Card.vue  CardWrapper.vue  Cards.vue  Checkbox.vue  CreateForm.vue  DefaultField.vue  DeleteMenu.vue  Excerpt.vue  FilterMenu.vue  Footer.vue  Gravatar.vue  Heading.vue  ImageLoader.vue  IndexEmptyDialog.vue  KeyValueTable.vue  LensMenu.vue  LoadingView.vue  MainHeader.vue  MainMenu.vue  MetricCard.vue  NestedComponent.vue  PanelItem.vue  ProgressBar.vue  (+10 more)
myproject/: settings.py  urls.py
products/: models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_initial.py  0002_product_price.py  0003_product_user.py
skus/: models.py
skus/migrations/: 0001_initial.py  0002_alter_sku_product.py
users/: manager.py  models.py
users/migrations/: 0001_initial.py
(+147 files in other folders)
